--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,7 @@ jobs:
   test-and-lint:
     strategy:
       matrix:
-        go-version: [1.15.x]
+        go-version: [1.19.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -27,20 +27,20 @@ jobs:
       if: matrix.platform == 'ubuntu-latest'
       run: |
         export PATH=$PATH:$(go env GOPATH)/bin
-        go get -u golang.org/x/lint/golint
+        go install golang.org/x/lint/golint@latest
         golint -set_exit_status ./...
     - name: staticcheck.io
       if: matrix.platform == 'ubuntu-latest'
       run: |
         export PATH=$PATH:$(go env GOPATH)/bin
-        go get honnef.co/go/tools/cmd/staticcheck
+        go install honnef.co/go/tools/cmd/staticcheck@latest
         staticcheck -checks all ./...
     - name: gofumports formatting
       if: matrix.platform == 'ubuntu-latest'
       run: |
         export PATH=$PATH:$(go env GOPATH)/bin
-        go get mvdan.cc/gofumpt/gofumports
-        gofumports -d .
-        [ -z "$(gofumports -l .)" ]
+        go install mvdan.cc/gofumpt@latest
+        gofumpt -d .
+        [ -z "$(gofumpt -l .)" ]
     - name: Test
       run: go test -race -count=1 ./...
